--- a/_posts/2023-08-11-LLMs.md
+++ b/_posts/2023-08-11-LLMs.md
@@ -1,1 +1,3 @@
-![Generative_AI_Coursera](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/main/_images/[Title]Generative_AI_notes.pdf)
+Notes from courses: https://www.coursera.org/learn/generative-ai-with-llms
+
+![Generative_AI_Coursera](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/main/_images/[LLM]Generative_AI_notes.png)
