--- a/_posts/2023-08-11-LLMs.md
+++ b/_posts/2023-08-11-LLMs.md
@@ -1,3 +1,3 @@
 Notes from courses: https://www.coursera.org/learn/generative-ai-with-llms
 
-![Generative_AI_Coursera](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/main/_images/[LLM]Generative_AI_notes.png)
+![Generative_AI_notes](https://github.com/Dingyi-Lai/Dingyi-Lai.github.io/blob/main/_images/Generative_AI_notes.png)
