--- a/_posts/2023-08-11-LLMs.md
+++ b/_posts/2023-08-11-LLMs.md
@@ -1,5 +1,5 @@
 Notes from courses: https://www.coursera.org/learn/generative-ai-with-llms
 
-![Generative_AI_notes](https://github.com/Dingyi-Lai/Dingyi-Lai.github.io/blob/main/_images/[LLM]Generative_AI_notes.png)
+![Generative_AI_notes](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/blob/main/_images/[LLM]Generative_AI_notes.png)
 
 ![BeamSearchFormula](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/main/_images/[MT]BeamSearchFormula.png)
