--- a/_posts/2023-08-11-LLMs.md
+++ b/_posts/2023-08-11-LLMs.md
@@ -1,6 +1,6 @@
 Notes from courses: https://www.coursera.org/learn/generative-ai-with-llms
 
-![Generative_AI_notes](_images/[LLM]Generative_AI_notes.png)
+![Generative_AI_notes](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/3c758ae37612a191323611731060411170c4d8f2/_images/%5BLLM%5DGenerative_AI_notes.png)
 
 <img src="_images/[LLM]Generative_AI_notes.png">
 
