update the image

--- a/_posts/2023-08-11-LLMs.md
+++ b/_posts/2023-08-11-LLMs.md
@@ -1,5 +1,5 @@
 Current Notes from *Generative AI with Large Language Models*: https://www.coursera.org/learn/generative-ai-with-llms
 
-![Generative_AI_notes](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/3c758ae37612a191323611731060411170c4d8f2/_images/%5BLLM%5DGenerative_AI_notes.png)
+![Generative_AI_notes_1](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/main/_images/%5BLLM%5DGenerative_AI_notes_1.png)
 
 Notes from *ChatGPT Prompt Engineering for Developers*: https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/
