--- a/_posts/2023-08-11-LLMs.md
+++ b/_posts/2023-08-11-LLMs.md
@@ -2,4 +2,6 @@ Current Notes from *Generative AI with Large Language Models*: https://www.cours
 
 ![Generative_AI_notes_1](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/main/_images/%5BLLM%5DGenerative_AI_notes_1.png)
 
+![Generative_AI_notes_2](https://raw.githubusercontent.com/Dingyi-Lai/Dingyi-Lai.github.io/main/_images/%5BLLM%5DGenerative_AI_notes_2.png)
+
 Notes from *ChatGPT Prompt Engineering for Developers*: https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/
